header alignment fixes

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,6 +20,18 @@
 	gap: var(--flex-gap, 1ch);
 }
 
+.big-text {
+	font-size: var(--step-1, 1.2656rem);
+}
+
+.bigger-text {
+	font-size: var(--step-2, 1.4238rem);
+}
+
+.biggest-text {
+	font-size: var(--step-3, 1.6019rem);
+}
+
 .bg-light {
 	background-color: var(--color-base-light, #fffff0);
 }
